2002-11-13 Matt Bemis <bemis@iol.unh.edu>
	* Fixed input/output to check for empty.

2002-11-12  Peter Breitenlohner <peb@mppmu.mpg.de>
2002-10-29  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>
	* Makefile.am: Add support for DESTDIR.
	* Makefile.in: Regenerated.

2002-10-21  Matt Bemis  <bemis@iol.unh.edu>
       * added input/output to xml_output in lib/framework.exp
       * removed the log feature replaced by input/output_xml

2002-09-24  Richard Earnshaw  <rearnsha@arm.com>

        * lib/libgloss.exp (build_wrapper): Use a tool-specific filename on
        the host for the testglue.

2002-09-04  Rob Savoye  <rob@welcomehome.org>

	* Clean.tcl (cleanfiles): Add more patterns to remove.
	* Makefile.am: Fix tarball target to clean up the source tree
	better.

2002-09-03  Rob Savoye  <rob@welcomehome.org>

	* Makefile.am: Add support to build Solaris and HPUX packages.
	* Makefile.in: Regenerated with automake 1.6.
	* aclocal.m4: Regenerated with aclocal 1.6.
	* example/hello/Makefile.in:  Regenerated with automake 1.6.
	* example/calc/Makefile.in:  Regenerated with automake 1.6.
	* missing: Update with the one from automake 1.6.
	
2002-08-30  Rob Savoye  <rob@welcomehome.org>

	* configure.in: Add AC_NO_EXECUTABLES, so things configure without
	building C++ executables. 
	* example/hello/hello.c: New C version of the example.
	* example/hello/Makefile.am: Build C based example.
	* example/hello/configure.in: Add AC_NO_EXECUTABLES, so things
	configure without building C++ executables.
	* configure: Regenerated.

2002-08-30  Nick Clifton  <nickc@redhat.com>

        * acinclude.m4: Provide alternative definition of AC_PROG_CXX
        which does not call AC_PROG_CXX_WORKS.  This allows dejagnu to
        be configured and built without a working C++ compiler.

2002-08-29  Rob Savoye  <rob@welcomehome.org>

	* debian/changelog: Update version number to 1.4.3.
	* redhat/dejagnu.spec: Update version number to 1.4.3.