@@ -159,7 +159,7 @@ proc newlib_include_flags { args } {
 	if { ${newlib_dir} != "" } {
 	    set newlib_dir [file dirname ${newlib_dir}]
 	}
-	return " -I$gccpath/newlib/targ-include -I${newlib_dir}"
+	return " -isystem $gccpath/newlib/targ-include -isystem ${newlib_dir}"
     } else {
 	verbose "No newlib support for this target"
     }
@@ -191,7 +191,7 @@ proc libio_include_flags { args } {
     if { $libio_bin_dir != "" && $libio_src_dir != "" } {
 	set libio_src_dir [file dirname ${libio_src_dir}]
 	set libio_bin_dir [file dirname ${libio_bin_dir}];
-	return " -I${libio_src_dir} -I${libio_bin_dir}"
+	return " -isystem ${libio_src_dir} -isystem ${libio_bin_dir}"
     } else {
 	return ""
     }
@@ -226,22 +226,23 @@ proc g++_include_flags { args } {
 
     set dir [lookfor_file ${srcdir} libg++]
     if { ${dir} != "" } {
-	append flags " -I${dir} -I${dir}/src"
+	append flags " -isystem ${dir} -isystem ${dir}/src"
     }
 
     set dir [lookfor_file ${srcdir} libstdc++-v3]
     if { ${dir} != "" } {
-	append flags " -I${dir}/include -I${dir}/include/std -I${dir}/include/c_std -I${dir}/libsupc++"
+	append flags " -isystem ${dir}/include -isystem ${dir}/include/std"
+	append flags " -isystem ${dir}/include/c_std -isystem ${dir}/libsupc++"
     }
 
     set dir [lookfor_file ${gccpath} libstdc++-v3]
     if { ${dir} != "" } {
-	append flags " -I${dir}/include -I${dir}/include/${target_alias}"
+	append flags " -isystem ${dir}/include -isystem ${dir}/include/${target_alias}"
     }
 
     set dir [lookfor_file ${srcdir} libstdc++]
     if { ${dir} != "" } {
-	append flags " -I${dir} -I${dir}/stl"
+	append flags " -isystem ${dir} -isystem ${dir}/stl"
     }
 
     return "$flags"
@@ -317,19 +318,20 @@ proc libstdc++_include_flags { args } {
 
     set dir [lookfor_file ${srcdir} libstdc++-v3]
     if { ${dir} != "" } {
-	append flags " -I${dir}/include -I${dir}/include/std -I${dir}/include/c_std -I${dir}/libsupc++"
+	append flags " -isystem ${dir}/include -isystem ${dir}/include/std"
+	append flags " -isystem ${dir}/include/c_std -isystem ${dir}/libsupc++"
     }
 
     set gccpath [get_multilibs]
 
     set dir [lookfor_file ${gccpath} libstdc++-v3]
     if { ${dir} != "" } {
-	append flags " -I${dir}/include -I${dir}/include/${target_alias}"
+	append flags " -isystem ${dir}/include -isystem ${dir}/include/${target_alias}"
     }
 
     set dir [lookfor_file ${srcdir} libstdc++]
     if { ${dir} != "" } {
-	append flags " -I${dir} -I${dir}/stl"
+	append flags " -isystem ${dir} -isystem ${dir}/stl"
     }
 
     return "$flags"
@@ -422,6 +424,7 @@ proc get_multilibs { args } {
 	    break;
 	}
     }
+    set mopts ""
     if { [llength $args] > 0 } {
 	set mopts [lindex $args 0];
     } else {
@@ -857,7 +860,7 @@ proc winsup_include_flags { args } {
 	set winsup_dir [lookfor_file ${srcdir} winsup/include/windows.h]
 	if { ${winsup_dir} != "" } {
 	    set winsup_dir [file dirname ${winsup_dir}]
-	    return " -I${winsup_dir}"
+	    return " -isystem ${winsup_dir}"
 	}
     }
     verbose "No winsup support for this target"
